--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-InvGrid 0.1
+InvGrid 0.2
 
 InvGrid is a simple inventory editor for Minecraft. It is designed to be cross platform compatible, unlike some other editors that require mono on Linux and OS X. Only Alpha based maps are currently supported.
 
@@ -15,10 +15,10 @@ make
 OS X users can run build_bundle.sh to generate a bundle and dmg.
 
 Usage instructions
-Start InvGrid, go to File->Open, and select the level.dat for the world you would like to edit. OS X users can find the world save files in the /Users/<username>/Library/Application Support/minecraft/saves/ directory.
+Start InvGrid and go to File->Open World X, with X being the world number of your save.
 
 Next, select a row in the table on the left to begin editing. If an item doesn't exist in that slot, click "New Item" to create one. Adjust the selected item's type, count, and damage on the right. Changes are automatically reflected in the left table.
 
-Finally, when you're done editing, go to File->Save and save over the level.dat you originally opened.
+Finally, when you're done editing, go to File->Save to save your changes.
 
 Happy mining! :)
