--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-InvGrid 0.6.1
+InvGrid 0.7-rc1
 
 InvGrid is a simple inventory editor for Minecraft. It is designed to be cross platform compatible, unlike some other editors that require mono on Linux and OS X. Only Alpha based maps are currently supported.
 
